about infos update

--- a/index.html
+++ b/index.html
@@ -26,21 +26,27 @@
 						I'm Djalmir Miodutzki.
 					</p>
 					<p>
-						I am a frontend developer with experience since 2016, specializing in building dynamic, responsive, and scalable web applications. My expertise spans a wide range of technologies, including pure JavaScript, Vue.js (Vue 2 and Vue 3), and build tools like Vite and Webpack.
+						I help companies transform ideas into fast, secure, and scalable web applications using Vue and Node.js. Since 2016, I have been developing rich front-end interfaces and stable back-ends, always focusing on performance, best practices, and user experience.
 					</p>
 					<p>
-						I excel in creating modern user interfaces, from Single Page Applications (SPA) and Progressive Web Apps (PWA) to custom solutions leveraging WebComponents. Additionally, I have advanced skills in API integrations, high-level DOM manipulation, and developing interactive games and graphics using HTML5 Canvas.
+						On the front-end, I develop SPAs and PWAs with Vue 2/3, pure JavaScript, Vite, modern componentization patterns, reactive states, and integration with REST/JSON APIs. I also develop interactive experiences with Canvas, WebSockets, and WebRTC.
 					</p>
 					<details>
 						<summary>More about me</summary>
 						<p>
-							Beyond frontend development, I have strong expertise in backend technologies, including Node.js and Express, as well as server administration with Ubuntu, Nginx, PM2, and advanced deployment configurations. My skill set also covers MongoDB, WebSockets, WebRTC, SEO, responsive design, and version control tools like Git.
+							On the back-end, I work with Node.js, Express, authentication, middlewares, and REST services. I have extensive experience in Linux infrastructure: Ubuntu VPS, Nginx, PM2, SSL, continuous deployment, log analysis, optimization, and critical incident resolution.
 						</p>
 						<p>
-							With over 30 technical skills in my portfolio, I am driven by the pursuit of efficient and innovative solutions. I see challenges not as obstacles but as opportunities to exceed expectations and deliver exceptional results.
+							I also develop integrations with local LLMs using Ollama, creating interfaces, automations, and pipelines for intelligent web applications running securely and offline.
 						</p>
 						<p>
-							If you are looking for a versatile and dedicated developer to turn ideas into impactful projects, I would be delighted to collaborate with you.
+							I enjoy delivering clean code, consistent architectures, and lasting solutions. I see technical challenges as opportunities to create better systems—stable, scalable, and easy to maintain.
+						</p>
+						<p>
+							I always strive to combine technical expertise, practical vision, and execution capabilities.
+						</p>
+						<p>
+							If your team is looking for someone who solves, delivers, and improves what they touch, I would be pleased to collaborate with you.
 						</p>
 					</details>
 				</div>
@@ -189,7 +195,7 @@
 						</small>
 					</div>
 				</li>
-				
+
 			</ul>
 		</div>
 
