--- a/index.html
+++ b/index.html
@@ -79,35 +79,6 @@
 	<section id="section2">
 		<div class="container">
 			<ul>
-				<li>
-					<div>
-						<b>TaskBoard</b>
-						<hr />
-					</div>
-					<zion-carousel srcs="imgs/taskboard (1).png, imgs/taskboard (2).png, imgs/taskboard (3).png, imgs/taskboard (4).png, imgs/taskboard (5).png"></zion-carousel>
-					<div class="first innerLi">
-						<p>
-							Minimalist Kanban for teams focused on productivity.
-						</p>
-						<p>
-							With websockets technology for real-time updates for all users connected to the same board. Respecting user preferences, with light and dark themes.
-						</p>
-					</div>
-					<div class="aContainer innerLi">
-						<a href="https://taskBoard.razion.games" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
-						</a>
-					</div>
-					<br />
-					<hr />
-					<div class="innerLi">
-						<small>
-							<span>Technologies used in this project:</span><br />
-							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
-							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
-						</small>
-					</div>
-				</li>
 
 				<li>
 					<div>
@@ -141,14 +112,43 @@
 
 				<li>
 					<div>
+						<b>TaskBoard</b>
+						<hr />
+					</div>
+					<zion-carousel srcs="imgs/taskboard (1).png, imgs/taskboard (2).png, imgs/taskboard (3).png, imgs/taskboard (4).png, imgs/taskboard (5).png"></zion-carousel>
+					<div class="first innerLi">
+						<p>
+							Minimalist Kanban for teams focused on productivity.
+						</p>
+						<p>
+							With websockets technology for real-time updates for all users connected to the same board. Respecting user preferences, with light and dark themes.
+						</p>
+					</div>
+					<div class="aContainer innerLi">
+						<a href="https://taskBoard.razion.games" target="_blank" rel="noopener noreferrer">
+							<button class="blueBt">Visit Site</button>
+						</a>
+					</div>
+					<br />
+					<hr />
+					<div class="innerLi">
+						<small>
+							<span>Technologies used in this project:</span><br />
+							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
+							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
+						</small>
+					</div>
+				</li>
+
+				<li>
+					<div>
 						<b>Smartphone WebComponent</b>
 						<hr />
 					</div>
 					<zion-carousel srcs="imgs/Smartphone1.png, imgs/Smartphone2.png, imgs/Smartphone3.png, imgs/Smartphone4.png, imgs/Smartphone5.png"></zion-carousel>
 					<div class="first innerLi">
-						<p>
-							The <smartphone-3d> is a custom web component that renders a highly detailed, interactive 3D smartphone visualization. This component allows for various transformations, animations, and interaction modes.
-						</p>
+						<p>The 3D-smartphone is a custom web component that renders a highly detailed, interactive 3D smartphone visualization.</p>
+						<p>This component allows for various transformations, animations, and interaction modes.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://github.com/Djalmir/3D-Smartphone" target="_blank" rel="noopener noreferrer">
@@ -169,15 +169,66 @@
 
 				<li>
 					<div>
+						<b>AiUi</b>
+						<hr />
+					</div>
+					<zion-carousel srcs="imgs/AiUi1.png, imgs/AiUi2.png"></zion-carousel>
+					<div class="first innerLi">
+						<p>AiUi is an in development web interface to chat with local models exposed by Ollama, with web search support, browser‑persisted history, and a Web Components UI.</p>
+					</div>
+					<div class="aContainer innerLi">
+						<a href="https://github.com/Djalmir/AiUi" target="_blank" rel="noopener noreferrer">
+							<button class="blueBt">View on Github</button>
+						</a>
+					</div>
+					<br />
+					<hr>
+					<div class="innerLi">
+						<small>
+							<span>Technologies used in this project:</span><br />
+							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
+							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+						</small>
+					</div>
+				</li>
+
+				<li>
+					<div>
+						<b>Precify</b>
+						<hr />
+					</div>
+					<zion-carousel srcs="imgs/Precify1.png, imgs/Precify2.png, imgs/Precify3.png, imgs/Precify4.png"></zion-carousel>
+					<div class="first innerLi">
+						<p>Create customized price quotes quickly and professionally.</p>
+						<p>Automate calculations and generate ready-to-send documents.</p>
+					</div>
+					<div class="aContainer innerLi">
+						<a href="https://lp.razion.games/estimativeGenerator" target="_blank" rel="noopener noreferrer">
+							<button class="blueBt">Visit Site</button>
+						</a>
+					</div>
+					<br />
+					<hr />
+					<div class="innerLi">
+						<small>
+							<span>Technologies used in this project:</span><br />
+							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
+							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
+						</small>
+					</div>
+				</li>
+
+				<li>
+					<div>
 						<b>Games</b>
 						<hr />
 					</div>
 					<zion-carousel srcs="imgs/games (1).png, imgs/games (2).png, imgs/games (3).png, imgs/games (4).png"></zion-carousel>
 					<div class="first innerLi">
 						<p>Have fun!</p>
-						<p>
-							Classic games site. All games were made with pure javascript!
-						</p>
+						<p>Classic games site. All games were made with pure javascript!</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://razion.games" target="_blank" rel="noopener noreferrer">
