new about; new api request;

--- a/index.html
+++ b/index.html
@@ -22,31 +22,28 @@
 						<canvas id="matrixCanvas"></canvas>
 						<img id="pic" src="/imgs/Dj.png" alt="Foto de Djalmir Miodutzki">
 					</div>
+					<p>I'm Djalmir Miodutzki.</p>
 					<p>
-						I'm Djalmir Miodutzki.
+						I build fast, secure, and scalable web apps using Vue.js and Node.js.<br />
+						Since 2016, I’ve been developing complete web systems, always focusing on performance, clean architecture, and reliable user experiences.
 					</p>
 					<p>
-						I help companies transform ideas into fast, secure, and scalable web applications using Vue and Node.js. Since 2016, I have been developing rich front-end interfaces and stable back-ends, always focusing on performance, best practices, and user experience.
-					</p>
-					<p>
-						On the front-end, I develop SPAs and PWAs with Vue 2/3, pure JavaScript, Vite, modern componentization patterns, reactive states, and integration with REST/JSON APIs. I also develop interactive experiences with Canvas, WebSockets, and WebRTC.
+						On the front end, I develop SPAs and PWAs with Vue.js, JavaScript(ES6+) and Vite, using modern componentization patterns, reactive state management, and REST/JSON API integrations.<br />
+						I also build interactive experiences with Canvas, WebSockets, and WebRTC.
 					</p>
 					<details>
 						<summary>More about me</summary>
 						<p>
-							On the back-end, I work with Node.js, Express, authentication, middlewares, and REST services. I have extensive experience in Linux infrastructure: Ubuntu VPS, Nginx, PM2, SSL, continuous deployment, log analysis, optimization, and critical incident resolution.
+							On the back end, I work with Node.js and Express, implementing authentication, middlewares, and REST services.<br />
+							I have strong experience with Linux-based infrastructure, including Ubuntu VPS, Nginx, PM2, SSL, continuous deployment, log analysis, optimization, and critical incident resolution.
 						</p>
+						<p>I also develop integrations with local LLMs using Ollama, building secure, offline-first interfaces, automations, and pipelines for intelligent web applications.</p>
 						<p>
-							I also develop integrations with local LLMs using Ollama, creating interfaces, automations, and pipelines for intelligent web applications running securely and offline.
+							I focus on clean code, consistent architectures, and long-term maintainability.<br />
+							I see technical challenges as opportunities to design better systems — stable, scalable, and built to last.
 						</p>
-						<p>
-							I enjoy delivering clean code, consistent architectures, and lasting solutions. I see technical challenges as opportunities to create better systems—stable, scalable, and easy to maintain.
-						</p>
-						<p>
-							I always strive to combine technical expertise, practical vision, and execution capabilities.
-						</p>
-						<p>
-							If your team is looking for someone who solves, delivers, and improves what they touch, I would be pleased to collaborate with you.
+						<p>I always strive to combine technical expertise, practical vision, and execution capabilities.</p>
+						<p>If your team values engineers who execute, solve problems, and improve everything they touch, I’d be glad to collaborate.
 						</p>
 					</details>
 				</div>
@@ -87,16 +84,13 @@
 					</div>
 					<zion-carousel srcs="imgs/lp1.png, imgs/lp2.png"></zion-carousel>
 					<div class="first innerLi">
-						<p>
-							Landing page for Razion.
-						</p>
-						<p>
-							With a modern and dynamic design, the landing page for Razion is a must-visit for anyone interested in the company's products and services.
-						</p>
+						<p>Landing page for Razion.</p>
+						<p>With a modern and dynamic design, the landing page for Razion presents the company’s products and services with a modern, dynamic design.</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://lp.razion.games" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
+							<button class="blueBt">Live Application</button>
 						</a>
 					</div>
 					<br />
@@ -117,16 +111,13 @@
 					</div>
 					<zion-carousel srcs="imgs/taskboard (1).png, imgs/taskboard (2).png, imgs/taskboard (3).png, imgs/taskboard (4).png, imgs/taskboard (5).png"></zion-carousel>
 					<div class="first innerLi">
-						<p>
-							Minimalist Kanban for teams focused on productivity.
-						</p>
-						<p>
-							With websockets technology for real-time updates for all users connected to the same board. Respecting user preferences, with light and dark themes.
-						</p>
+						<p>Minimalist Kanban for teams focused on productivity.</p>
+						<p>A task management application featuring real-time updates via WebSockets, theme switching, and a responsive UI.</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://taskBoard.razion.games" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
+							<button class="blueBt">Live Application</button>
 						</a>
 					</div>
 					<br />
@@ -149,10 +140,11 @@
 					<div class="first innerLi">
 						<p>The 3D-smartphone is a custom web component that renders a highly detailed, interactive 3D smartphone visualization.</p>
 						<p>This component allows for various transformations, animations, and interaction modes.</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://github.com/Djalmir/3D-Smartphone" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">View on Github</button>
+							<button class="blueBt">Source Code</button>
 						</a>
 					</div>
 					<br />
@@ -161,7 +153,7 @@
 						<small>
 							<span>Technologies used in this project:</span><br />
 							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=css&logoColor=1572B6" alt="css badge" class="badge" />
 							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 						</small>
 					</div>
@@ -175,10 +167,11 @@
 					<zion-carousel srcs="imgs/AiUi1.png, imgs/AiUi2.png"></zion-carousel>
 					<div class="first innerLi">
 						<p>AiUi is an in development web interface to chat with local models exposed by Ollama, with web search support, browser‑persisted history, and a Web Components UI.</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://github.com/Djalmir/AiUi" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">View on Github</button>
+							<button class="blueBt">Source Code</button>
 						</a>
 					</div>
 					<br />
@@ -188,7 +181,7 @@
 							<span>Technologies used in this project:</span><br />
 							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
 							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=css&logoColor=1572B6" alt="css badge" class="badge" />
 							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 						</small>
 					</div>
@@ -203,10 +196,11 @@
 					<div class="first innerLi">
 						<p>Create customized price quotes quickly and professionally.</p>
 						<p>Automate calculations and generate ready-to-send documents.</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://lp.razion.games/estimativeGenerator" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
+							<button class="blueBt">Live Application</button>
 						</a>
 					</div>
 					<br />
@@ -229,10 +223,11 @@
 					<div class="first innerLi">
 						<p>Have fun!</p>
 						<p>Classic games site. All games were made with pure javascript!</p>
+						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://razion.games" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
+							<button class="blueBt">Live Application</button>
 						</a>
 					</div>
 					<br />
@@ -241,7 +236,7 @@
 						<small>
 							<span>Technologies used in this project:</span><br />
 							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=css&logoColor=1572B6" alt="css badge" class="badge" />
 							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 						</small>
 					</div>
@@ -256,7 +251,7 @@
 			<small>
 				<span>Technologies used on this site:</span><br />
 				<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-				<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+				<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=css&logoColor=1572B6" alt="css badge" class="badge" />
 				<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 			</small>
 			<span>Copyright &copy; 2021 - by <a href="https://www.linkedin.com/in/djalmir-miodutzki/" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
@@ -272,7 +267,6 @@
 	</button>
 
 	<script src="index.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/gh/Djalmir/zionCarousel/carousel.js"></script> -->
 	<script src="carousel.js"></script>
 </body>
 
