--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<p>Built from scratch — frontend, backend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
-						<a href="https://lp.razion.games/estimativeGenerator" target="_blank" rel="noopener noreferrer">
+						<a href="https://precify.razion.games" target="_blank" rel="noopener noreferrer">
 							<button class="blueBt">Live Application</button>
 						</a>
 					</div>
