description/footer updates

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<div class="first innerLi">
 						<p>Landing page for Razion.</p>
 						<p>With a modern and dynamic design, the landing page for Razion presents the company’s products and services with a modern, dynamic design.</p>
-						<p>Built from scratch — frontend, backend and infrastructure.</p>
+						<p>Built from scratch — frontend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://lp.razion.games" target="_blank" rel="noopener noreferrer">
@@ -99,7 +99,6 @@
 						<small>
 							<span>Technologies used in this project:</span><br />
 							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
-							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
 						</small>
 					</div>
 				</li>
@@ -140,7 +139,7 @@
 					<div class="first innerLi">
 						<p>The 3D-smartphone is a custom web component that renders a highly detailed, interactive 3D smartphone visualization.</p>
 						<p>This component allows for various transformations, animations, and interaction modes.</p>
-						<p>Built from scratch — frontend, backend and infrastructure.</p>
+						<p>Built from scratch.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://github.com/Djalmir/3D-Smartphone" target="_blank" rel="noopener noreferrer">
@@ -223,7 +222,7 @@
 					<div class="first innerLi">
 						<p>Have fun!</p>
 						<p>Classic games site. All games were made with pure javascript!</p>
-						<p>Built from scratch — frontend, backend and infrastructure.</p>
+						<p>Built from scratch — frontend and infrastructure.</p>
 					</div>
 					<div class="aContainer innerLi">
 						<a href="https://razion.games" target="_blank" rel="noopener noreferrer">
@@ -254,7 +253,7 @@
 				<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=css&logoColor=1572B6" alt="css badge" class="badge" />
 				<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 			</small>
-			<span>Copyright &copy; 2021 - by <a href="https://www.linkedin.com/in/djalmir-miodutzki/" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
+			<span>Made with ❤ by <a href="https://www.linkedin.com/in/djalmir-miodutzki/" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
 			<button id="hideInterfaceBt" onclick="showHideInterface()">
 				<span id="hideInterfaceBtSpan">Hide Interface</span>
 				<img src="/imgs/eye.svg" id="eyeImg" alt="eye image">
