--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<a href="https://wa.me/5547988956620" target="_blank" rel="noopener noreferrer" title="WhatsApp">
 						<img class="contactSvg" src="imgs/message-circle.svg" alt="WhatsApp image">
 					</a>
-					<a href="mailto:djalmir_miodutzki@hotmail.com" target="_blank" rel="noopener noreferrer" title="Email">
+					<a href="mailto:djalmir@razion.games" target="_blank" rel="noopener noreferrer" title="Email">
 						<img class="contactSvg" src="imgs/mail.svg" alt="email image">
 					</a>
 				</div>
